--- a/site/views/layouts/main.handlebars
+++ b/site/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <title>v-look</title>  
 </head> 
 <body>  
-    <header>123</header>   
+    <header><img alt="" src="/img/tim.jpg"/></header>   
     {{{body}}} 
 
 </body> 
