--- a/site/views/reg.handlebars
+++ b/site/views/reg.handlebars
@@ -1,28 +1,28 @@
-
 <link href="../common/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
-<h2>Sign up here!</h2>
-<form class="form-horizontal" method="POST">
-    <input type="hidden" name="_csrf" value="{{csrf}}">
-    <div class="form-group">
-        <label for="fieldName" class="col-sm-2 control-label">
+<div class="wrapper">
+    <h2>Sign up here!</h2>
+    <form class="form-horizontal" method="POST">
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+        <div class="form-group">
+            <label for="fieldName" class="col-sm-2 control-label">
             Name
         </label>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" id="name" name="Name">
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="name" name="Name">
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="fieldName" class="col-sm-2 control-label">
+        <div class="form-group">
+            <label for="fieldName" class="col-sm-2 control-label">
             Email
         </label>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" id="email" name="Email">
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="email" name="Email">
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-4"> 
-            <button type="submit" class="btn btn-default">Submit</button> 
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-4">
+                <button type="submit" class="btn btn-default">Submit</button>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
