--- a/site/views/layouts/main.handlebars
+++ b/site/views/layouts/main.handlebars
@@ -1,20 +1,28 @@
 <!doctype html> 
 <html> 
 <head>     
-<title>v-look</title>  
+<title>v-look</title> 
+<link href="/common/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
 {{!-- <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> --}}
 <style>
     header{
         display:table-cell;
         vertical-align: middle;
     }
+    header img{
+
+    }
 </style>
 </head> 
 <body>
-    <header>
+    <div class="container">
+ <header>
         <img alt="" src="/img/banner.jpg"/>
     </header>   
-    {{{body}}} 
+      {{{body}}} 
+    </div>
+   
+  
 
 </body> 
 </html>
